--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         </li>
                         <li class="flex items-start gap-3">
                             <i class="fas fa-comment-dots text-pink-500 mt-1"></i>
-                            <p class="text-sm text-gray-600">كتابة <span class="font-bold">أي تعليق</span> على المنشور الخاص بالمسابقة.</p>
+                            <p class="text-sm text-gray-600"> نشر صورة ستوري وكتابة  <span class="font-bold">تعليق</span> على المنشور الخاص بالمسابقة.</p>
                         </li>
                         <li class="flex items-start gap-3">
                             <i class="fas fa-shuffle text-pink-500 mt-1"></i>
@@ -251,3 +251,4 @@
 
 </body>
 </html>
+
