--- a/index.html
+++ b/index.html
@@ -182,26 +182,53 @@
                         <span class="font-bold text-gray-700">المنتج: لبن النسيم</span>
                     </div>
 
-                    <h4 class="font-bold text-lg text-pink-800 mb-4 border-b border-gray-100 pb-2">شروط المشاركة:</h4>
-                    <ul class="space-y-4">
-                        <li class="flex items-start gap-3">
-                            <i class="fas fa-user-plus text-pink-500 mt-1"></i>
-                            <p class="text-sm text-gray-600">متابعة صفحة النسيم على إنستجرام.</p>
-                        </li>
-                        <li class="flex items-start gap-3">
-                            <i class="fas fa-heart text-pink-500 mt-1"></i>
-                            <p class="text-sm text-gray-600">الإعجاب (Like) بمنشور المسابقة.</p>
-                        </li>
-                        <li class="flex items-start gap-3">
-                            <i class="fas fa-comment-dots text-pink-500 mt-1"></i>
-                            <p class="text-sm text-gray-600"> نشر صورة ستوري وكتابة  <span class="font-bold">تعليق</span> على المنشور الخاص بالمسابقة.</p>
-                        </li>
-                        <li class="flex items-start gap-3">
-                            <i class="fas fa-shuffle text-pink-500 mt-1"></i>
-                            <p class="text-sm text-gray-600">آلية الفوز: <span class="font-bold">سحب عشوائي</span> من التعليقات.</p>
-                        </li>
-                    </ul>
+        <div class="bg-white p-6 rounded-lg shadow-md max-w-md w-full border border-pink-100">
+        
+        <h4 class="font-bold text-lg text-pink-800 mb-4 border-b border-gray-100 pb-2">شروط المشاركة:</h4>
+        
+        <ul class="space-y-4">
+            <!-- شرط المتابعة -->
+            <li class="flex items-start gap-3">
+                <div class="mt-1 min-w-[20px] text-center">
+                    <i class="fas fa-user-plus text-pink-500"></i>
                 </div>
+                <p class="text-sm text-gray-600">متابعة صفحة النسيم على إنستجرام.</p>
+            </li>
+
+            <!-- شرط الإعجاب -->
+            <li class="flex items-start gap-3">
+                <div class="mt-1 min-w-[20px] text-center">
+                    <i class="fas fa-heart text-pink-500"></i>
+                </div>
+                <p class="text-sm text-gray-600">الإعجاب (Like) بمنشور المسابقة.</p>
+            </li>
+
+            <!-- شرط الستوري والتعليق -->
+            <li class="flex items-start gap-3">
+                <div class="mt-1 min-w-[20px] text-center">
+                    <i class="fas fa-comment-dots text-pink-500"></i>
+                </div>
+                <p class="text-sm text-gray-600">كتابة <span class="font-bold text-pink-700">تعليق</span> على المنشور الخاص بالمسابقة.</p>
+            </li>
+
+            <!-- الشرط الجديد: نشر المنشور وعمل تاج -->
+            <li class="flex items-start gap-3 bg-pink-50 p-2 rounded-md -mr-2">
+                <div class="mt-1 min-w-[20px] text-center">
+                    <i class="fas fa-share-from-square text-pink-600"></i>
+                </div>
+                <p class="text-sm text-gray-700 font-medium">نشر المنشور على صفحتك (Post) وعمل تاج <span class="font-bold text-pink-700">(@Tag)</span> لصفحة النسيم.</p>
+            </li>
+
+            <!-- آلية الفوز -->
+            <li class="flex items-start gap-3 pt-2 border-t border-gray-50">
+                <div class="mt-1 min-w-[20px] text-center">
+                    <i class="fas fa-shuffle text-pink-500"></i>
+                </div>
+                <p class="text-sm text-gray-600">آلية الفوز: <span class="font-bold text-pink-700">سحب عشوائي</span> (شامل جميع الشروط).</p>
+            </li>
+        </ul>
+
+    </div>
                 <div class="bg-pink-50 p-4 text-center border-t border-pink-100">
                     <span class="text-xs font-semibold text-pink-400 uppercase tracking-widest">تحدي الحظ</span>
                 </div>
@@ -251,4 +278,5 @@
 
 </body>
 </html>
+
 
